aggregateur/data/scdl/menus-collectifs/0.1.0/README.md
---
permalink: /scdl/menus-collectifs/0.1.0.html
redirect_from: null
title: Menus de la restauration collective
version: 0.1.0
---

# Schéma menus restauration collective

Ce schéma permet de décrire la composition des menus proposés par les collectivités locales ou les syndicats mixtes de restauration. Il est complété par un autre schéma décrivant la composition des plats

## Contexte

Cette initiative vide à standardiser la publication des jeux de données relatifs aux offres de restauration collective. Elle concerne la restauration scolaire mais peut s'étendre aux offres de restauration pour les personnes âgées, les restaurants administratifs ou les centres de loisirs. Elle s'articule autour des notions de menus, et des plats qui les composent. Un schéma complémentaire est dédié à la composition des plats permettant pour ceux qui le souhaitent de décire les ingrédients et nutriments qui entrent dans la composition des plats. Les 2 schéma sont liés par une clé commune "codePlat".


## Documents de cadrage juridique

* produit bio et labellisé : 50% dont 20% issu de l'agriculture biologique (standard européen ou français ?)
* 50% de produits durables ou sous signes d'origine et de qualité (dont des produits bio) dans la restauration collective publique à partir du 1er janvier 2022 :https://www.legifrance.gouv.fr/affichTexte.do?cidTexte=JORFTEXT000037547946&categorieLien=id#JORFARTI000037547961
* décret 1227-2011 relatif à la qualité nutritionnelle des repas servis en restauration scolaire
* recommandations du GEMRCN (Groupe d'Etude des Marchés de la Restauration Collective et Nutrition,
* réglement 1169/2011 concernant l'information des consommateurs sur les denrées alimentaires (réglement INCO).        

## Outils

* [![](https://scdl.opendatafrance.net/docs/assets/validata-logo-horizontal.png)](https://go.validata.fr/table-schema?schema_name=scdl.menus-collectifs) [Valider un fichier avec Validata](http://go.validata.fr/table-schema?schema_name=scdl.menus-collectifs)
* [Créer un fichier avec CSV Good Generator](https://csv-gg.etalab.studio/?schema=scdl)
* [Télécharger un fichier gabarit au format XLSX](https://scdl.opendatafrance.net/docs/templates/menus-collectifs.xlsx)


## Voir aussi

* adresser un message à [scdl@opendatafrance.email](mailto:scdl@opendatafrance.email?subject=menus-collectifs)
* ouvrir un ticket sur le [dépôt GitLab d’OpenDataFrance](https://git.opendatafrance.net/scdl/menus-collectifs/issues)